--- a/assets/libs/css/style.css
+++ b/assets/libs/css/style.css
@@ -19,6 +19,7 @@ body h3 {
 
 .btn-menu {
 	color: #D6453B;
+	width: max-content !important;
 }
 
 .btn-menu.active {
@@ -33,24 +34,6 @@ body h3 {
 .btn-menu.active:visited {
 	background: #D6453B;
 	color: #FFF8F0;
-}
-
-.aws-search-form {
-	border-radius: 16px !important;
-}
-
-.aws-wrapper {
-	width: 20rem !important;
-}
-
-.aws-wrapper input {
-	background: #FFF8F0;
-	border-radius: 16px !important;
-	border: 1px solid #D6453B !important;
-}
-
-.aws-wrapper input::placeholder {
-	color: #D6453B;
 }
 
 li {
@@ -88,8 +71,11 @@ li {
 	background: #C7931D;
 }
 
-/* Oculta las flechas de Swiper en pantallas de 768px o menos */
-@media (max-width: 768px) {
+.movil {
+	display: none !important;
+}
+
+@media (max-width: 1024px) {
 	.swiper-button-next, .swiper-button-prev {
 		display: none !important;
 	}
@@ -123,15 +109,15 @@ li {
 		width: 100%;
 		margin-bottom: 1rem;
 	}
+	.desktop {
+		display: none !important;
+	}
 	.movil {
-		display: flex !important;
-		flex-direction: column;
-		align-items: start !important;
+		display: block !important;
 	}
 	.movil ul {
 		display: flex !important;
-		flex-direction: column;
-		align-items: start !important;
+		flex-direction: column !important;
 	}
 }
 
