Update navbar toggler styling and icon; enhance visibility and user experience

--- a/assets/libs/css/style.sass
+++ b/assets/libs/css/style.sass
@@ -30,6 +30,9 @@ body
   &.active:visited
     background: $primary-color
     color: $background-color
+
+.navbar-toggler
+  color: $primary-color
 li
   list-style: none !important
 
