--- a/assets/libs/css/style.sass
+++ b/assets/libs/css/style.sass
@@ -5,49 +5,76 @@ $extra-color: #C7931D
 $font-family: 'Roboto', sans-serif
 $text-color: #2E2E2E
 
-.product a
-  text
+.btn-outline-red
+  border-color: $primary-color !important
+  color: $primary-color
+  &:hover
+    background: $primary-color
+    color: $background-color
+  &:visited
+    color: $primary-color
+    &:hover
+      color: $background-color
 
 body
   background-color: $background-color
   font-family: $font-family
   color: $text-color
   h1
-    font-size: 2.5rem //40px
+    font-size: 2.5rem
+    //40px
     color: $secondary-color
+
   h2
-    font-size: 1.875rem //30px
+    font-size: 1.875rem
+  //30px
   h3
-    font-size: 1.5rem //24px
+    font-size: 1.5rem
+//24px
 .btn-menu
   color: $primary-color
-  width: max-content!important
+  width: max-content !important
+
   &.active
     background: $primary-color
     color: $background-color
+
   &:visited
     color: $primary-color
+
   &.active:visited
     background: $primary-color
     color: $background-color
 
 .navbar-toggler
   color: $primary-color
+
 li
   list-style: none !important
+
+.product-equal-height
+  min-height: 350px
+/* Ajusta el valor según lo que necesites */
 
 #logo
   height: 8rem
   width: 8rem
   border: 4px solid $background-color
+
 #title-banner
   bottom: -1rem
   left: 1rem
+
 .bg-mostaza
   background: $extra-color
 .swiper-promotions
   height: 35rem
 
+.text-verde
+  color: $secondary-color
+
+.price
+  color: $secondary-color !important
 
 .text-mostaza
   color: $extra-color
@@ -60,6 +87,9 @@ li
 
 .movil
   display: none !important
+ins[aria-hidden="true"]
+  background: none !important
+  color: $extra-color !important
 @media (max-width: 1024px)
   .swiper-button-next, .swiper-button-prev
     display: none !important
@@ -67,6 +97,7 @@ li
     width: 100%
     height: 5rem !important
     object-fit: cover
+
     h1
       background: $background-color
   #logo
@@ -89,14 +120,15 @@ li
     display: none !important
   .movil
     display: block !important
+
     ul
       display: flex !important
       flex-direction: column !important
-  //.movil
+//.movil
+//  display: flex !important
+//  flex-direction: column
+//  align-items: start !important
+  //ul
   //  display: flex !important
   //  flex-direction: column
   //  align-items: start !important
-    //ul
-    //  display: flex !important
-    //  flex-direction: column
-    //  align-items: start !important
