--- a/assets/libs/css/style.sass
+++ b/assets/libs/css/style.sass
@@ -4,22 +4,42 @@ $secondary-color: #5E7A58
 $extra-color: #C7931D
 $font-family: 'Roboto', sans-serif
 $text-color: #2E2E2E
+.border-green
+  border-color: $secondary-color !important
 
 .btn-outline-red
   border-color: $primary-color !important
   color: $primary-color
+
   &:hover
     background: $primary-color
     color: $background-color
+
   &:visited
     color: $primary-color
+
     &:hover
+      color: $background-color
+
+.btn-footer
+  color: $secondary-color
+
+  &:hover
+    background: $secondary-color
+    color: $background-color
+
+  &:visited
+    color: $secondary-color
+
+    &:hover
+
       color: $background-color
 
 body
   background-color: $background-color
   font-family: $font-family
   color: $text-color
+
   h1
     font-size: 2.5rem
     //40px
@@ -67,6 +87,7 @@ li
 
 .bg-mostaza
   background: $extra-color
+
 .swiper-promotions
   height: 35rem
 
@@ -87,9 +108,11 @@ li
 
 .movil
   display: none !important
+
 ins[aria-hidden="true"]
   background: none !important
   color: $extra-color !important
+
 @media (max-width: 1024px)
   .swiper-button-next, .swiper-button-prev
     display: none !important
