--- a/assets/libs/css/style.sass
+++ b/assets/libs/css/style.sass
@@ -34,7 +34,18 @@ $text-color: #2E2E2E
     &:hover
 
       color: $background-color
+.btn-contact
+  color: $background-color
+  &:hover
+    background: $background-color
+    color: $secondary-color
 
+  &:visited
+    color: $background-color
+
+    &:hover
+
+      color: $secondary-color
 body
   background-color: $background-color
   font-family: $font-family
@@ -96,10 +107,12 @@ li
 
 .price
   color: $secondary-color !important
-
+.text-bg
+  color: $background-color
 .text-mostaza
   color: $extra-color
-
+.bg-green
+  background: $secondary-color !important
 .swiper-button-prev, .swiper-button-next
   color: $extra-color !important
 
