--- a/assets/libs/css/style.css
+++ b/assets/libs/css/style.css
@@ -209,5 +209,6 @@ ins[aria-hidden="true"] {
 }
 
 /*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.css.map */
 
 /*# sourceMappingURL=style.css.map */
