Add product display template and enhance product loop; improve styling and structure

--- a/assets/libs/css/style.css
+++ b/assets/libs/css/style.css
@@ -163,5 +163,6 @@ ins[aria-hidden="true"] {
 }
 
 /*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.css.map */
 
 /*# sourceMappingURL=style.css.map */
