Enhance product display styles and update button designs for better user experience

--- a/assets/libs/css/style.sass
+++ b/assets/libs/css/style.sass
@@ -4,6 +4,8 @@ $secondary-color: #5E7A58
 $extra-color: #C7931D
 $font-family: 'Roboto', sans-serif
 $text-color: #2E2E2E
+.text-dark
+  color: $text-color !important
 #loader
   position: fixed !important
   top: 0
