--- a/assets/libs/css/style.sass
+++ b/assets/libs/css/style.sass
@@ -146,7 +146,16 @@ li
 ins[aria-hidden="true"]
   background: none !important
   color: $extra-color !important
-
+.lupa
+  top: 1%
+  right: 1%
+.wp-post-image
+  width: 100% !important
+  height: 60vh !important
+  object-fit: cover !important
+  display: block
+.text-line
+  text-decoration: line-through
 @media (max-width: 1024px)
   .swiper-button-next, .swiper-button-prev
     display: none !important
