--- a/assets/libs/css/style.sass
+++ b/assets/libs/css/style.sass
@@ -6,6 +6,7 @@ $font-family: 'Roboto', sans-serif
 $text-color: #2E2E2E
 .text-dark
   color: $text-color !important
+
 #loader
   position: fixed !important
   top: 0
@@ -17,10 +18,13 @@ $text-color: #2E2E2E
 a
   text-decoration: none
   color: $extra-color
+
   &:visited
     color: $extra-color
+
   &:hover
     color: $extra-color
+
 .border-green
   border-color: $secondary-color !important
 
@@ -51,8 +55,10 @@ a
     &:hover
 
       color: $background-color
+
 .btn-contact
   color: $background-color
+
   &:hover
     background: $background-color
     color: $secondary-color
@@ -63,6 +69,7 @@ a
     &:hover
 
       color: $secondary-color
+
 body
   background-color: $background-color
   font-family: $font-family
@@ -70,15 +77,14 @@ body
 
   h1
     font-size: 2.5rem
-    //40px
     color: $secondary-color
 
   h2
     font-size: 1.875rem
-  //30px
+
   h3
     font-size: 1.5rem
-//24px
+
 .btn-menu
   color: $primary-color
   width: max-content !important
@@ -102,7 +108,6 @@ li
 
 .product-equal-height
   min-height: 350px
-/* Ajusta el valor según lo que necesites */
 
 #logo
   height: 8rem
@@ -124,16 +129,22 @@ li
 
 .price
   color: $secondary-color !important
+
 .text-bg
   color: $background-color
+
   &:visited
     color: $background-color !important
+
   &:hover
     color: $background-color !important
+
 .text-mostaza
   color: $extra-color
+
 .bg-green
   background: $secondary-color !important
+
 .swiper-button-prev, .swiper-button-next
   color: $extra-color !important
 
@@ -146,16 +157,23 @@ li
 ins[aria-hidden="true"]
   background: none !important
   color: $extra-color !important
+
 .lupa
   top: 1%
   right: 1%
+
 .wp-post-image
   width: 100% !important
   height: 60vh !important
   object-fit: cover !important
   display: block
+
 .text-line
   text-decoration: line-through
+
+.lista > *
+  list-style-type: disc !important
+
 @media (max-width: 1024px)
   .swiper-button-next, .swiper-button-prev
     display: none !important
@@ -187,11 +205,3 @@ ins[aria-hidden="true"]
     ul
       display: flex !important
       flex-direction: column !important
-//.movil
-//  display: flex !important
-//  flex-direction: column
-//  align-items: start !important
-  //ul
-  //  display: flex !important
-  //  flex-direction: column
-  //  align-items: start !important
