--- a/assets/libs/css/style.sass
+++ b/assets/libs/css/style.sass
@@ -4,9 +4,30 @@ $secondary-color: #5E7A58
 $extra-color: #C7931D
 $font-family: 'Roboto', sans-serif
 $text-color: #2E2E2E
+header
+  position: sticky !important
+  top: 0 !important
+  left: 0
+  z-index: 99
+  background: $background-color
 .text-dark
   color: $text-color !important
+.btn-menu
+  position: relative
 
+.cart-count
+  position: absolute
+  top: 0
+  right: 0
+  background: $extra-color
+  color: #fff
+  border-radius: 3px
+  padding: 0.2em 0.5em
+  font-size: 0.75em
+  transform: translate(50%, -50%)
+  min-width: 20px
+  text-align: center
+  line-height: 1.5em
 #loader
   position: fixed !important
   top: 0
@@ -153,6 +174,8 @@ li
 
 .movil
   display: none !important
+.movil-2
+  display: none !important
 
 ins[aria-hidden="true"]
   background: none !important
@@ -201,7 +224,11 @@ ins[aria-hidden="true"]
     display: none !important
   .movil
     display: block !important
-
     ul
       display: flex !important
       flex-direction: column !important
+  .movil-2
+    display: block !important
+    ul
+      display: flex !important
+      flex-direction: row !important
